# autopilot

./: autopilot.db  pyproject.toml  pytest.ini  readme.md  requirements.txt  test_autopilot.db
allure-results/: 00025749-1a9e-4ea0-8a7b-4ea748f3adcc-result.json  0019a72b-1020-48ca-bba3-0b085246c7fc-result.json  001b94f1-2706-410f-81fa-8eda7a0748a5-result.json  0026b5e6-febd-4c2a-8535-3ac94d7e524d-container.json  002b57a1-3d5e-42c0-b570-edd8854c18ae-result.json  002e0066-1d38-43c2-9756-2a3ae14ddc49-result.json  0044a4fc-db17-42c8-861e-5c607a07f207-result.json  0048fdf4-e598-4183-a090-2e4a3648a6b6-result.json  0078435b-e85b-420c-b4c9-267bbce2e2d3-result.json  00a7c74d-5bea-4756-b684-b00b2a1b9a5b-container.json  00b736dc-7eff-4223-b2e5-dec54c9851a5-result.json  00b917f1-013a-4f68-9270-bf2844816c41-container.json  00cdf102-4dfd-41a7-b2e4-6ba6a071ed59-container.json  00d85fd6-9ec7-4bd8-824c-a4802728df24-result.json  00dd1f1f-f23a-4bf7-ba09-4625dba93241-container.json  011fda72-388e-4da0-97cb-54217e4c15f4-result.json  012f3b8e-491c-406b-bdb8-1ccf8a4717cf-container.json  0132804c-5589-4dfd-8d26-723296309481-container.json  014338d8-79cd-43ad-be6c-a5c22d5e7120-result.json  0148d70e-7288-4361-99c9-68283d2984e8-result.json  014c4b4d-192a-44ac-b30a-fc7ec4be7c3a-result.json  01572030-4a9a-4c18-b103-1dc02b1f66a9-result.json  01572f07-d19d-46a6-8bf6-00c7d21a7014-container.json  0176d99f-1649-4fd7-999a-9bf701d8e697-container.json  017b0582-c6be-4821-b390-79eb59837302-container.json  018540a9-9821-405e-8eea-6b77f2570745-container.json  01977512-6595-4683-a820-5518a5230b7f-container.json  (+4100 more)
(+9 files in other folders)
